update, mostly lab 7